Fix always showing dead scrollbar in flyout
Stop always showing a scrollbar on the flyout menu, though preserve
flyout menu scrolling if the content doesn't fit in the viewport.

--- a/src/sass/_theme_badge.sass
+++ b/src/sass/_theme_badge.sass
@@ -33,12 +33,14 @@
     &.rst-active-old-version
       background-color: $yellow
       color: $black
-  &.shift-up
-    height: auto
-    max-height: 100%
-    overflow-y: scroll
   &.shift-up .rst-other-versions
     display: block
+    overflow-y: hidden
+    max-height: 90vh
+    +media(max-height 410px)
+      max-height: 80vh
+    &:hover
+      overflow-y: auto
   .rst-other-versions
     font-size: 90%
     padding: $base-line-height / 2
